--- a/flaskpython/Jenkinsfile
+++ b/flaskpython/Jenkinsfile
@@ -16,7 +16,7 @@ node {
                         sh "git config user.name kienle"
                         //sh "git switch master"
                         sh "cat deployment.yaml"
-                        sh "sed -i 's+tonykien2012/test.*+tonykien2012/flaskpython:${DOCKERTAG}+g' deployment.yaml"
+                        sh "sed -i 's+tonykien2012/test.*+tonykien2012/flaskpython:${DOCKERTAG2}+g' deployment.yaml"
                         sh "cat deployment.yaml"
                         sh "git add ."
                         sh "git commit -m 'Done by Jenkins Job changemanifest: ${env.BUILD_NUMBER}'"
