--- a/flaskpython/deployment.yaml
+++ b/flaskpython/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskpython
     spec:
       containers:
-      - image: tonykien2012/flaskpython:10
+      - image: tonykien2012/flaskpython:latest
         name: flaskpython
         resources: {}
 status: {}
