--- a/app-demo1/deployment.yaml
+++ b/app-demo1/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: app-demo1
-        image: tonykien2012/app-demo1:latest
+        image: tonykien2012/app-demo1:4
         imagePullPolicy: Always #IfNotPresent
         resources:
           #requests:
